# pangoline

./: ENHANCEMENTS.md  README.md  TEMPLATES.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml
pangoline/: cli.py  layout.py  rasterize.py  render.py
pangoline/templates/: TALMUD_README.md  alto.tmpl  bilingual_parallel.json  header_two_columns.json  hebrew_syriac_parallel.json  talmud.json  test_fonts.json  three_columns.json  two_columns.json
