[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "pangoline-tool"
dynamic = ["version"]
description = "Synthetic document rendering with parallel ALTO output"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Benjamin Kiessling", email = "mittagessen@l.unchti.me" },
]
keywords = ["atr", "document rendering", "alto"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "rich",
    "jinja2",
    "PyGObject",
    "pypdfium2",
    "lxml",
    "pillow",
    "numpy",
    "regex",
]

[project.urls]
Homepage = "http://pangoline.github.io"

[project.scripts]
pangoline = "pangoline.cli:cli"

[tool.hatch.version]
source = "versioningit"

[tool.versioningit]

[tool.hatch.build.targets.wheel]
packages = ["pangoline"]

[tool.hatch.build.targets.sdist]
include = ["pangoline/"]
